# latex-templates-online

./: .env.example  .gitignore  AppDockerfile  Dockerfile  LICENCE.md  docker-compose.yml  pyproject.toml
backend/: pyproject.toml
backend/src/: settings.py
backend/src/compiler/: __init__.py  compiler.py  exceptions.py  models.py
backend/src/compiler/texlive_compilers/: __init__.py  texlive_compiler.py
backend/src/core/db/: __init__.py  session.py  settings.py
backend/src/core/security/: security.py  settings.py
backend/src/model/: data_workspace.py  user.py
backend/src/models/: data.py  template.py  template_workspace.py  workspace.py
backend/src/repositories/: __init__.py  repository.py
backend/src/repositories/s3/: repository.py  s3.py  settings.py
backend/src/schemas/: s3.py
backend/src/services/: service.py
backend/src/services/compiler/: compiler.py  models.py
backend/src/services/compiler/texlive_compilers/: lualatex_compiler.py
backend/src/utils/: __init__.py  async_functions.py  typevars.py
backend/tests/: test_compiler.py
frontend/: index.html  style.css
migrations/: 000001_initial.down.sql  000001_initial.up.sql
src/: main.py  settings.py
src/db/: session.py
src/dependencies/: compiler.py  template.py  tickets_set.py  user.py  utils.py  workspace.py
src/exceptions/: auth.py  template.py  tickets_set.py  user.py  utils.py  workspace.py
src/models/: base.py  public.py
src/repositories/: alchemy.py  dependencies.py  repository.py  s3.py  template.py  tickets_set.py  user.py  workspace.py
src/routes/: auth.py  forms.py  (+6 more)
tests/: test_compiler.py
(+40 files in other folders)
